--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -30,6 +30,17 @@
                     <button type="submit" class="btn btn-slate " value="Login"><span>Login </span></button>
                 </div>
             </form>
+            <br>
+            <div class="flex justify-center">
+                Don't have an account?
+            </div>
+            
+            <br>
+            <div class="flex justify-center">
+                <a href="{% url 'signup' %}">
+                    <button class="btn btn-slate">Sign Up</button>
+                </a>
+            </div>
 
         </div>
     </div>
