--- a/store/templates/store/signup.html
+++ b/store/templates/store/signup.html
@@ -79,6 +79,17 @@
                 </div>
             </form>
 
+            <br>
+            <div class="flex justify-center py-6">
+                Already have an account?
+            </div>
+            
+            <div class="flex justify-center py-6">
+                <a href="{% url 'login' %}">
+                    <button class="btn btn-slate ">Login</button>
+                </a>
+            </div>
+
         </div>
     </div>
     {#        <div class="signup">#}
