--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -70,6 +70,9 @@
                         </svg>
                     </button>
                 </a>
+                <a href="{% url 'logout' %}">
+                    <button>Logout</button>
+                </a>
             </div>
         </div>
     </div>
