--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -71,7 +71,7 @@
                     </button>
                 </a>
                 <a href="{% url 'logout' %}">
-                    <button>Logout</button>
+                    <button class="btn btn-ghost btn-circle">Logout</button>
                 </a>
             </div>
         </div>
