--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -15,7 +15,7 @@
                             Shipping Details
                         </h6>
                     </div>
-                    <form id="form">\
+                    <form id="form">
                         {% csrf_token %}
 
                         <div class="flex">
